--- a/src/main/webapp/user_html/2_team_show.html
+++ b/src/main/webapp/user_html/2_team_show.html
@@ -3,18 +3,87 @@
 <head>
     <meta charset="UTF-8">
 	<title>主页</title>
-	<style type="text/css" media="screen">  
-        @import url("../user_css/2_team_show.css");   
-        </style>  
+	<style>
+        body {
+            font-family: "font1", Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+        }
+
+        .nav {
+            text-align: center;
+        }
+
+        .nav span {
+            margin: 0 10px;
+        }
+
+        .nav a, .nav button {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px 15px;
+            font-size: 18px;
+            transition: background-color 0.3s ease;
+        }
+
+        .nav a:hover, .nav button:hover {
+            background-color: #555;
+            border-radius: 5px;
+        }
+
+        .nav button {
+            background-color: #4CAF50;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            margin-top: 5px;
+        }
+
+        .nav button:hover {
+            background-color: #45a049;
+        }
+
+        .div2 {
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        .alter {
+            margin: 10px;
+        }
+
+        .alter input[type="button"] {
+            background-color: #007bff;
+            border: none;
+            color: #fff;
+            padding: 10px 20px;
+            font-size: 18px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .alter input[type="button"]:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    <div class="div1">
-            <span class="passage"><a href="1_homepage.html">主页</a></span>
-            <span id="p"><a href="2_team_show.html">团队展示</a></span>
-            <span class="passage"><a href="3_pet_adopt.html">宠物领养</a></span>
-            <span class="passage"><a href="4_pet_help.html">宠物救助</a></span>
-            <span class="passage"><input id="login" type="button" onclick="location.href='login.html'" value="注册/登录"></span>
-        </div>
+<header>
+    <div class="nav">
+        <span><a href="1_homepage.html">主页</a></span>
+        <span><a href="2_team_show.html">团队展示</a></span>
+        <span><a href="3_pet_adopt.html">宠物领养</a></span>
+        <span><a href="4_pet_help.html">宠物救助</a></span>
+        <span><button onclick="location.href='5_login.html'">注册/登录</button></span>
+    </div>
+</header>
         <div class="div2"></div>
 </body>
 </html>
