--- a/src/main/webapp/user_html/3_pet_adopt.html
+++ b/src/main/webapp/user_html/3_pet_adopt.html
@@ -1,92 +1,127 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-	<title>主页</title>
-    <link rel="stylesheet" href="user_css/bootstrap.css">
-	<style>
-        body {
-            font-family: "font1", Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-        }
-
-        .nav {
+    <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap-theme.min.css">
+    <script type="text/javascript" src="../bootstrap/jQuery-3.6.0/jquery.js"></script>
+    <script type="text/javascript" src="user_js/3_pet_adopt.js"></script>
+    <script type="text/javascript" src="../bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="user_js/3_pet_adopt.js"></script>
+    <style>
+        .nav-item{
+            background-color: rgba(234, 223, 154, 0.64);
+            width:16%;
+            margin-left: 2%;
+            margin-right: 2%;
             text-align: center;
+            border-radius:10px;
+            font-size: larger;
         }
-
-        .nav span {
-            margin: 0 10px;
-        }
-
-        .nav a, .nav button {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px 15px;
-            font-size: 18px;
-            transition: background-color 0.3s ease;
-        }
-
-        .nav a:hover, .nav button:hover {
-            background-color: #555;
-            border-radius: 5px;
-        }
-
-        .nav button {
-            background-color: #4CAF50;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-            margin-top: 5px;
-        }
-
-        .nav button:hover {
-            background-color: #45a049;
-        }
-
-        .div2 {
-            text-align: center;
-            margin-top: 50px;
-        }
-
-        .alter {
-            margin: 10px;
-        }
-
-        .alter input[type="button"] {
-            background-color: #007bff;
-            border: none;
-            color: #fff;
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        .alter input[type="button"]:hover {
-            background-color: #0056b3;
+        .container-fluid{
+            background-color: #e4b9c0;
+            height: 1000px;
         }
     </style>
+    <title>宠物领养</title>
 </head>
 <body>
-<header>
-    <div class="nav">
-        <span><a href="1_homepage.html">主页</a></span>
-        <span><a href="2_team_show.html">团队展示</a></span>
-        <span><a href="3_pet_adopt.html">宠物领养</a></span>
-        <span><a href="4_pet_help.html">宠物救助</a></span>
-        <span><button onclick="location.href='5_login.html'">注册/登录</button></span>
+<!-- 模态框 -->
+<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="myModalLabel">宠物领养与救助管理系统</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="adopt"  method="post">
+                    <div class="form-group">
+                        <label for="adoptionNumber">宠物编号</label>
+                        <input type="number" class="form-control" id="adoptionNumber" name="adoptionNumber" placeholder="输入编号">
+                    </div>
+                    <div class="form-group">
+                        <label for="adoptionPetNumber">领养申请编号</label>
+                        <input type="number" class="form-control" id="adoptionPetNumber" name="adoptionPetNumber" placeholder="输入领养申请编号">
+                    </div>
+                    <div class="form-group">
+                        <label for="adopterNumber">申请人编号</label>
+                        <input type="number" class="form-control" id="adopterNumber" name="adopterNumber" placeholder="输入申请人编号">
+                    </div>
+                    <div class="form-group">
+                        <label for="adoptionTime" class="form-label">申请时间</label>
+                        <input type="datetime-local" class="form-control" id="adoptionTime" name="adoptionTime">
+                    </div>
+                    <div class="form-group">
+                        <label for="adoptionSketch" class="form-label">申请理由</label>
+                        <input type="text" class="form-control" id="adoptionSketch" name="adoptionSketch" placeholder="请输入申请理由">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+                <button type="button" class="btn btn-primary">提交</button>
+            </div>
+        </div>
     </div>
-</header>
-        <div class="div2">
-        </div>/
-
+</div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12 col-md-12 col-xs-12 col-lg-12">
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="1_homepage.html">主页</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="2_team_show.html">团队展示</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="3_pet_adopt.jsp">宠物领养</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="4_pet_help.html">宠物救助</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="5_login.html" tabindex="-1" aria-disabled="true">登录</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <!-- 触发模态框的按钮 -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+        我要领养
+    </button>
+    <div class="container mt-5">
+        <h1 class="mb-4">宠物领养信息列表</h1>
+        <table class="table table-bordered">
+            <thead>
+            <tr>
+                <th scope="col">宠物编号</th>
+                <th scope="col">宠物名</th>
+                <th scope="col">品种</th>
+                <th scope="col">年龄</th>
+                <th scope="col">性别</th>
+                <th scope="col">健康状况</th>
+                <th scope="col">照片</th>
+                <th scope="col">性格</th>
+            </tr>
+            </thead>
+            <tbody>
+<!--<%&#45;&#45;            <c:forEach var="pet" items="${pets}">&#45;&#45;%>-->
+<!--<%&#45;&#45;                <tr>&#45;&#45;%>-->
+<!--<%&#45;&#45;                    <th scope="row">${pet.id}</th>&#45;&#45;%>-->
+<!--<%&#45;&#45;                    <td>${pet.category}</td>&#45;&#45;%>-->
+<!--<%&#45;&#45;                    <td>${pet.breed}</td>&#45;&#45;%>-->
+<!--<%&#45;&#45;                    <td>${pet.age}</td>&#45;&#45;%>-->
+<!--<%&#45;&#45;                    <td>${pet.healthStatus}</td>&#45;&#45;%>-->
+<!--<%&#45;&#45;                    <td>${pet.temperament}</td>&#45;&#45;%>-->
+<!--<%&#45;&#45;                </tr>&#45;&#45;%>-->
+<!--<%&#45;&#45;            </c:forEach>&#45;&#45;%>-->
+            </tbody>
+        </table>
+    </div>
+</div>
 </body>
 </html>
