--- a/src/main/webapp/user_html/4_pet_help.html
+++ b/src/main/webapp/user_html/4_pet_help.html
@@ -1,97 +1,115 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>主页</title>
-    <link rel="stylesheet" href="user_css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap-theme.min.css">
+    <script type="text/javascript" src="../bootstrap/jQuery-3.6.0/jquery.js"></script>
+    <script type="text/javascript" src="../bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="user_js/4_pet_help.js.js"></script>
     <style>
-        body {
-            font-family: "font1", Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-        }
-
-        .nav {
+        .nav-item{
+            background-color: rgba(234, 223, 154, 0.64);
+            width:16%;
+            margin-left: 2%;
+            margin-right: 2%;
             text-align: center;
+            border-radius:10px;
+            font-size: larger;
         }
-
-        .nav span {
-            margin: 0 10px;
-        }
-
-        .nav a, .nav button {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px 15px;
-            font-size: 18px;
-            transition: background-color 0.3s ease;
-        }
-
-        .nav a:hover, .nav button:hover {
-            background-color: #555;
-            border-radius: 5px;
-        }
-
-        .nav button {
-            background-color: #4CAF50;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-            margin-top: 5px;
-        }
-
-        .nav button:hover {
-            background-color: #45a049;
-        }
-
-        .div2 {
-            text-align: center;
-            margin-top: 50px;
-        }
-
-        .alter {
-            margin: 10px;
-        }
-
-        .alter input[type="button"] {
-            background-color: #007bff;
-            border: none;
-            color: #fff;
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        .alter input[type="button"]:hover {
-            background-color: #0056b3;
+        .container-fluid{
+            background-color: #e4b9c0;
+            height: 1000px;
         }
     </style>
+    <title>宠物救助</title>
 </head>
 <body>
-<header>
-    <div class="nav">
-        <span><a href="1_homepage.html">主页</a></span>
-        <span><a href="2_team_show.html">团队展示</a></span>
-        <span><a href="3_pet_adopt.html">宠物领养</a></span>
-        <span><a href="4_pet_help.html">宠物救助</a></span>
-        <span><button onclick="location.href='5_login.html'">注册/登录</button></span>
+<!-- 模态框 -->
+<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="taskModalLabel">救助任务发布</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="task"  method="post">
+                    <!-- 地点 -->
+                    <div class="form-group">
+                        <label for="taskSubject" class="form-label">救助对象</label>
+                        <input type="text" class="form-control" id="taskSubject"  name="taskSubject" placeholder="请输入救助对象">
+                    </div>
+                    <!-- 地点 -->
+                    <div class="form-group">
+                        <label for="taskNumber" class="form-label">任务编号</label>
+                        <input type="number" class="form-control" id="taskNumber" name="taskNumber" placeholder="请输入任务编号">
+                    </div>
+                    <!-- 地点 -->
+                    <div class="form-group">
+                        <label for="captainNumber" class="form-label">领队编号</label>
+                        <input type="number" class="form-control" id="captainNumber" name="captainNumber" placeholder="请输入领队编号">
+                    </div>
+                    <!-- 时间 -->
+                    <div class="form-group">
+                        <label for="time" class="form-label">时间</label>
+                        <input type="datetime-local" class="form-control" id="time" name="time">
+                    </div>
+
+                    <!-- 地点 -->
+                    <div class="form-group">
+                        <label for="taskLocation" class="form-label">任务地点</label>
+                        <input type="text" class="form-control" id="taskLocation" name="taskLocation" placeholder="请输入地点">
+                    </div>
+
+                    <!-- 任务简述 -->
+                    <div class="form-group">
+                        <label for="taskDescription" class="form-label">任务描述</label>
+                        <textarea class="form-control" id="taskDescription" rows="3"></textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary">发布</button>
+            </div>
+        </div>
     </div>
-</header>
-<div class="div2">
-    <span class="alter">
-        <input type="button" onclick="location.href='3_pose.html'" value="发布救助任务">
-    </span>
-    <span class="alter">
-        <input type="button" onclick="location.href='4_pet_task.html'" value="浏览救助任务">
-    </span>
+</div>
+<!--<%&#45;&#45;主体&#45;&#45;%>-->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12 col-md-12 col-xs-12 col-lg-12">
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="1_homepage.html">主页</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="2_team_show.html">团队展示</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="3_pet_adopt.html">宠物领养</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="4_pet_help.jsp">宠物救助</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="5_login.html" tabindex="-1" aria-disabled="true">登录</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+        <!-- 触发模态框的按钮 -->
+        发布救助任务
+    </button>
+    <div class="row align-items-center" style="text-align: center">
+        <div class="col-sm-10 col-md-10 col-xs-10 col-lg-10" style="margin: 20px auto;">
+            <button type="button" class="btn btn-info" onclick="location.href='4_pet_task_pose.jsp'">浏览救助任务</button>
+        </div>
+    </div>
 </div>
 </body>
 </html>
