--- a/src/main/webapp/user_html/5_login.html
+++ b/src/main/webapp/user_html/5_login.html
@@ -1,32 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>注册/登录</title>
-        <style type="text/css" media="screen">  
-            @import url("../user_css/5_login.css");   
-            </style>  
-    </head>
-    <body>
-        <form>
-            <p>账号<br />
-                <input type="text" class="textinput" placeholder="请输入账号" />
-            </p>
-            <p>密码<br />
-                <input type="password" class="textinput" placeholder="请输入密码" />
-            </p>
-            <p>
-                <input id="remember" type="checkbox" /><label for="smtxt">记住密码</label>
-            </p>
-            <p>
-                <input type="submit" value="登录" /> <input type="button" name="Submit" onClick="location.href='1_homepage.html'" value="返回">
-
-            </p>
-            <p class="smtxt">还没有账户？<a href="6_enroll.html">注册</a></a>
-            </p>
-            <p>
-                <input id="ad_login" type="button" value="管理员登录" onClick="location.href='../admin_html/0_ad_login.html'">
-            </p>
-        </form>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap-theme.min.css">
+    <script type="text/javascript" src="../bootstrap/jQuery-3.6.0/jquery.js"></script>
+    <script type="text/javascript" src="../bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="user_js/5_login.js"></script>
+    <style>
+        .nav-item{
+            background-color: rgba(234, 223, 154, 0.64);
+            width:16%;
+            margin-left: 2%;
+            margin-right: 2%;
+            text-align: center;
+            border-radius:10px;
+            font-size: larger;
+        }
+        #login,#enroll{
+            background-color: cornflowerblue;
+            font-size: small;
+            width: 20%;
+        }
+        #log{
+            background-color: #9ac9ea;
+            border-radius: 15px;
+            padding: 20px 80px;
+            margin:30px 0;
+        }
+        .container-fluid{
+            background-color: #e4b9c0;
+            height: 1000px;
+        }
+        button{
+            margin: 0 40px;
+        }
+    </style>
+    <title>登录</title>
+</head>
+<body>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12 col-md-12 col-xs-12 col-lg-12">
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="1_homepage.html">主页</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="2_team_show.html">团队展示</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="3_pet_adopt.html">宠物领养</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="4_pet_help.html">宠物救助</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="5_login.jsp" tabindex="-1" aria-disabled="true">登录</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3"></div>
+        <div class="col-sm-6 col-md-6 col-xs-6 col-lg-6" id="log">
+            <ul class="nav nav-tabs">
+                <li class="nav-item" id="login">
+                    <a class="nav-link active" aria-current="page" href="5_login.jsp">登录</a>
+                </li>
+                <li class="nav-item" id="enroll">
+                    <a class="nav-link" href="6_enroll.html">注册</a>
+                </li>
+            </ul>
+            <form action="login1"  method="post">
+                <div class="mb-3">
+                    <label for="userUsername" class="form-label">账号</label>
+                    <input type="text" class="form-control" id="userUsername" name="userUsername">
+                </div>
+                <div class="mb-3" style="margin-bottom: 20px">
+                    <label for="userPassword">密码</label>
+                    <input type="password" class="form-control" id="userPassword" name="userPassword">
+                </div>
+                <div style="text-align: center">
+                <button type="button" class="btn btn-light" onclick="location.href='1_homepage.html'">返回</button>
+                <button type="submit" class="btn btn-primary">登录</button>
+                <button type="button" class="btn btn-primary" onclick="location.href='../admin_html/0_ad_login.html'">管理员登录</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+</body>
 </html>
