--- a/src/main/webapp/admin_html/6_ad_task.html
+++ b/src/main/webapp/admin_html/6_ad_task.html
@@ -217,7 +217,7 @@
         }
 
         window.onclick = function(event) {
-            if (event.target == modal) {
+            if (event.target === modal) {
                 closeModal(); // 点击模态框外部区域关闭模态框
             }
         }
