增加一部分删改方法

--- a/src/main/webapp/user_html/3_pet_adopt.html
+++ b/src/main/webapp/user_html/3_pet_adopt.html
@@ -286,7 +286,7 @@ var modal = document.getElementById("myModal");
         }
 
         window.onclick = function(event) {
-            if (event.target == modal) {
+            if (event.target === modal) {
                 closeModal(); // 点击模态框外部区域关闭模态框
             }
         }
